<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgItemMainCover"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/margin8"
            android:contentDescription="@string/cdListMainFoodCover"
            android:transitionName="ImageFoodTransition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textItemMainName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8"
            android:text="@string/hintListMainFoodName"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgItemMainCover"
            app:layout_constraintTop_toTopOf="@+id/imgItemMainCover" />

        <TextView
            android:id="@+id/textItemMainShortDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8"
            android:text="@string/hintListMainFoodDesc"
            android:lines="2"
            android:maxLines="2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgItemMainCover"
            app:layout_constraintTop_toBottomOf="@+id/textItemMainName" />

        <Button
            android:id="@+id/btnItemMainDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8"
            android:text="@string/btnListMainDetails"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textItemMainShortDesc" />

        <TextView
            android:id="@+id/textItemMainNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:text="@string/hintListMainFoodId"
            app:layout_constraintBottom_toBottomOf="@+id/imgItemMainCover"
            app:layout_constraintStart_toEndOf="@+id/imgItemMainCover" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>